fix: adjust ourfurniture section5 mobile size padding and gap

--- a/web/css/ourfurniture.css
+++ b/web/css/ourfurniture.css
@@ -596,7 +596,7 @@
 @media screen and (max-width: 600px) {
     .promotion-info-btn {
         width: 50%;
-        padding: 10%;
+        padding: 5%;
         gap: 30%;
         display: flex;
         flex-direction: column;
@@ -659,7 +659,7 @@
     .promotion-info-btn {
         width: 50%;
         padding: 5%;
-        gap: 30%;
+        gap: 40%;
         display: flex;
         flex-direction: column;
     }
@@ -701,7 +701,7 @@
     .promotion-card {
         display: flex;
         background-color: var(--light-cream);
-        aspect-ratio: 1.2 / 0.8;
+        aspect-ratio: 1.2 / 1;
         width: 100%;
         margin: auto;
         box-shadow: var(--shadow);
@@ -710,8 +710,32 @@
 
     .promotion-img-overlap {
         width: 100%;
-        aspect-ratio: 1.1 / 1.464;
+        aspect-ratio: 1.1 / 1.833;
         background: linear-gradient(to right, #fdf8f2, #fdf8f200);
 
     }
+}
+
+@media screen and (max-width: 450px) {
+    .promotion-info-btn {
+        width: 50%;
+        padding: 5%;
+        gap: 30%;
+        display: flex;
+        flex-direction: column;
+    }
+
+}
+
+
+@media screen and (max-width: 400px) {
+    .promotion-info-btn {
+        width: 50%;
+        padding: 5%;
+        gap: 10%;
+        display: flex;
+        flex-direction: column;
+    }
+
+
 }
